[package]
name = "node"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1.0.58"
tokio = { version = "1.36.0", features = ["net", "sync", "rt", "time", "macros", "io-util"]}
chrono = { version = "0.4.37", features = ["now"]}
tracing = { version = "0.1.40" }
